applications/openeuler-software-package/server/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  namespace: openeuler-software-pkg
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/software-package-server:9fd3059ecb6f225e3ac4b4af8109db21470cf5e4
        args:
        - --port=8080
        - --config-file=/opt/app/config/config.yaml
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        livenessProbe:
          httpGet:
            path: /swagger/doc.json
            port: 8080
          initialDelaySeconds: 5    #延迟加载时间
          periodSeconds: 5           #重试时间间隔
          timeoutSeconds: 5          #超时时间设置
          failureThreshold: 3
        readinessProbe:              #就绪探针
          initialDelaySeconds: 5    #延迟加载时间
          periodSeconds: 5           #重试时间间隔
          timeoutSeconds: 5         #超时时间设置
          failureThreshold: 3        #探测失败的重试次数
          httpGet:
            path: /swagger/doc.json
            port: 8080
        volumeMounts:
        - mountPath: /opt/app/config/config.yaml
          name: server-configmap
          subPath: config.yaml
      volumes:
      - configMap:
          defaultMode: 420
          name: server-configmap
        name: server-configmap
