applications/openeuler-software-package/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: openeuler-software-pkg
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
