applications/openeuler-software-package/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: server-ingress
  namespace: openeuler-software-pkg
spec:
  tls:
    - hosts:
        - software-pkg.openeuler.org
      secretName: server-tls
  rules:
    - host: software-pkg.openeuler.org
      http:
        paths:
        - backend:
            serviceName: backend-service
            servicePort: 80
          path: /api/v1
        - backend:
            serviceName: backend-service
            servicePort: 80
          path: /swagger
